increase z-index of barBottomContainer so the help bar will not overlap it when scrolling, fixes #5885
git-svn-id: svn://develop.studip.de/studip/trunk@34904 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/layouts.less
+++ b/public/assets/stylesheets/less/layouts.less
@@ -130,7 +130,7 @@
         .flex-item(0, 1);
 
         min-width: @site-width;
-        z-index: 10; // High enough so it will be above the sidebar
+        z-index: 1001; // High enough so it will be above the sidebar
     }
 
     #layout_page {              // third row of flex-main
